Added Alert Message

--- a/base.html
+++ b/base.html
@@ -31,31 +31,34 @@
   <body>
     <div class="page-container">
       <header>
-        <a href="./">
-          <p class="title">STREAMLINE SMP</p>
-        </a>
-        <nav class="main-navigation" role="navigation">
-          <input class="menu-toggle" type="checkbox" />
-          <!-- Start of hamburger -->
-          <span class="line first-line"></span>
-          <span class="line secound-line"></span>
-          <span class="line third-line"></span>
-          <!-- End of hamburger -->
-          <ul class="nav-list">
-            <a href="./">
-              <li>HOME</li>
-            </a>
-            <a href="./community">
-              <li>COMMUNITY</li>
-            </a>
-            <a href="./about">
-              <li>ABOUT</li>
-            </a>
-            <a href="./join">
-              <li>JOIN</li>
-            </a>
-          </ul>
-        </nav>
+        <div class="header">
+          <a href="./">
+            <p class="title">STREAMLINE SMP</p>
+          </a>
+          <nav class="main-navigation" role="navigation">
+            <input class="menu-toggle" type="checkbox" />
+            <!-- Start of hamburger -->
+            <span class="line first-line"></span>
+            <span class="line secound-line"></span>
+            <span class="line third-line"></span>
+            <!-- End of hamburger -->
+            <ul class="nav-list">
+              <a href="./">
+                <li>HOME</li>
+              </a>
+              <a href="./community">
+                <li>COMMUNITY</li>
+              </a>
+              <a href="./about">
+                <li>ABOUT</li>
+              </a>
+              <a href="./join">
+                <li>JOIN</li>
+              </a>
+            </ul>
+          </nav>
+        </div>
+        <div class="notifications"></div>
       </header>
       <main></main>
       <footer>
