--- a/join.html
+++ b/join.html
@@ -32,31 +32,39 @@
   <body>
     <div class="page-container">
       <header>
-        <a href="./">
-          <p class="title">STREAMLINE SMP</p>
-        </a>
-        <nav class="main-navigation" role="navigation">
-          <input class="menu-toggle" type="checkbox" />
-          <!-- Start of hamburger -->
-          <span class="line first-line"></span>
-          <span class="line secound-line"></span>
-          <span class="line third-line"></span>
-          <!-- End of hamburger -->
-          <ul class="nav-list">
-            <a href="./">
-              <li>HOME</li>
-            </a>
-            <a href="./community">
-              <li>COMMUNITY</li>
-            </a>
-            <a href="./about">
-              <li>ABOUT</li>
-            </a>
-            <a href="./join">
-              <li class="current-pg">JOIN</li>
-            </a>
-          </ul>
-        </nav>
+        <div class="header">
+          <a href="./">
+            <p class="title">STREAMLINE SMP</p>
+          </a>
+          <nav class="main-navigation" role="navigation">
+            <input class="menu-toggle" type="checkbox" />
+            <!-- Start of hamburger -->
+            <span class="line first-line"></span>
+            <span class="line secound-line"></span>
+            <span class="line third-line"></span>
+            <!-- End of hamburger -->
+            <ul class="nav-list">
+              <a href="./">
+                <li>HOME</li>
+              </a>
+              <a href="./community">
+                <li>COMMUNITY</li>
+              </a>
+              <a href="./about">
+                <li>ABOUT</li>
+              </a>
+              <a href="./join">
+                <li class="current-pg">JOIN</li>
+              </a>
+            </ul>
+          </nav>
+        </div>
+        <div class="notifications">
+          <p>
+            We are currently in between seasons and are not accepting new
+            people. Expect season four summer of 2023.
+          </p>
+        </div>
       </header>
       <main>
         <h1 class="main-header green">HOW TO JOIN</h1>
